GNOME Bugzilla – Bug 761846
input-chooser: don't access priv pointer before checking no error
Last modified: 2016-02-11 17:29:08 UTC
See attached patch. This avoids a crash.
Created attachment 320843 [details] [review] input-chooser: don't access priv pointer before checking no error If the GCancellable is cancelled by the finalize() function, the callback will still be called potentially with an instance of the CcInputChooser that's not valid anymore. To avoid crashing in that case, only access the priv pointer of CcInputChooser when we have no error.
Review of attachment 320843 [details] [review]: looks good, thanks
Attachment 320843 [details] pushed as dee6f0c - input-chooser: don't access priv pointer before checking no error