region: don't access priv pointer before checking no error

If the GCancellable is cancelled by the finalize() function, the
callback will still be called potentially with an instance of the
panel that's not valid anymore.
To avoid crashing in that case, only access the priv pointer
when we have no error.

https://bugzilla.gnome.org/show_bug.cgi?id=761846